Refactor authentication process to remove JWT usage, simplifying login responses to success messages. Update SecurityConfig to permit all requests and adjust CORS settings. Modify LoginResponseDTO for new response structure. Update application properties for schema creation and adjust SQL scripts for plain text passwords. Enhance schema and data initialization scripts for clarity and consistency.